# midcli

./: README.md  pyproject.toml
src/midcli/: lib.py  main.py
tests/: test_image_generator.py
