[project]
name = "midcli"
version = "0.1.0"
description = "Command line to image generate from Midjourney on Huggingface"
authors = [
    {name = "Bruno Davi", email = "48166556+brunodavi@users.noreply.github.com"},
]
dependencies = [
    "gradio-client>=1.3.0",
    "fire>=0.6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
midcli = "midcli.main:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = 'python -m unittest discover -vvv'
